EXCEPTION_ACCESS_VIOLATION when CDS RO section vanished on win32

XMLWordPrintable

    • b72
    • Verified

        # A fatal error has been detected by the Java Runtime Environment:
        #
        # EXCEPTION_ACCESS_VIOLATION (0xc0000005) at pc=0x5dcde387, pid=36936, tid=0x0000b4e0
        #
        # JRE version: Java(TM) SE Runtime Environment (9.0) (build 1.9.0-internal-fastdebug-20150609213453.cphillim.jdk9-hs_err-b00)
        # Java VM: Java HotSpot(TM) Client VM (1.9.0-internal-20150609213453.cphillim.jdk9-hs_err-b00 mixed mode windows-x86 )
        # Problematic frame:
        # V [jvm.dll+0x13e387] Symbol::equals+0x7


        Stack: [0x0de70000,0x0dec0000], sp=0x0debe728, free space=313k
        Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [jvm.dll+0x13e387] Symbol::equals+0x7;; ?equals@Symbol@@QBE_NPBDH@Z+0x7
        V [jvm.dll+0x6a996] CompactHashtable<Symbol *,char>::lookup+0xd6;; ?lookup@?$CompactHashtable@PAVSymbol@@D@@QAEPAVSymbol@@PBDIH@Z+0xd6
        V [jvm.dll+0x84f3b] SymbolTable::lookup+0x6b;; ?lookup@SymbolTable@@AAEPAVSymbol@@HPBDHI@Z+0x6b
        V [jvm.dll+0x85381] SymbolTable::lookup_only+0x61;; ?lookup_only@SymbolTable@@SAPAVSymbol@@PBDHAAI@Z+0x61
        V [jvm.dll+0x5bf86] ClassFileParser::parse_constant_pool_entries+0x8c6;; ?parse_constant_pool_entries@ClassFileParser@@AAEXHPAVThread@@@Z+0x8c6
        V [jvm.dll+0x5a7d2] ClassFileParser::parse_constant_pool+0x102;; ?parse_constant_pool@ClassFileParser@@AAE?AVconstantPoolHandle@@PAVThread@@@Z+0x102
        V [jvm.dll+0x57f79] ClassFileParser::parseClassFile+0x459;; ?parseClassFile@ClassFileParser@@QAE?AVinstanceKlassHandle@@PAVSymbol@@PAVClassLoaderData@@VHandle@@VKlassHandle@@PAV?$GrowableArray@VHandle@@@@AAVTempNewSymbol@@_NPAVThread@@@Z+0x459
        V [jvm.dll+0x8b260] SystemDictionary::parse_stream+0x180;; ?parse_stream@SystemDictionary@@SAPAVKlass@@PAVSymbol@@VHandle@@1PAVClassFileStream@@VKlassHandle@@PAV?$GrowableArray@VHandle@@@@PAVThread@@@Z+0x180
        V [jvm.dll+0x1c29e9] VM_RedefineClasses::load_new_class_versions+0x329;; ?load_new_class_versions@VM_RedefineClasses@@AAE?AW4jvmtiError@@PAVThread@@@Z+0x329
        V [jvm.dll+0x1c0d25] VM_RedefineClasses::doit_prologue+0x95;; ?doit_prologue@VM_RedefineClasses@@UAE_NXZ+0x95
        V [jvm.dll+0x1a7708] JvmtiEnv::RedefineClasses+0x28;; ?RedefineClasses@JvmtiEnv@@QAE?AW4jvmtiError@@HPBU_jvmtiClassDefinition@@@Z+0x28
        V [jvm.dll+0x34917a] jvmti_RedefineClasses+0x14a;; _jvmti_RedefineClasses@12+0x14a
        C [jdwp.dll+0x80f1] redefineClasses+0x168;; _redefineClasses+0x168

              Assignee:
              Chris Plummer
              Reporter:
              Jesper Wilhelmsson
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: