8087153: EXCEPTION_ACCESS_VIOLATION when CDS RO section vanished on win32

When mapping RW for debugging support, update space_info->read_only to reflect it is RW

Reviewed-by: dcubed, coleenp, iklam